Added navigation bar and contact links

--- a/index.html
+++ b/index.html
@@ -25,7 +25,54 @@
     <link href="assets/css/main.css" rel="stylesheet">
 
 </head>
-<body>
+
+<body class="index-page">
+
+<header id="header" class="header dark-background d-flex flex-column">
+    <i class="header-toggle d-xl-none bi bi-list"></i>
+
+    <a href="index.html" class="logo d-flex align-items-center justify-content-center">
+        <h1 class="site-name">Rikus Swart</h1>
+    </a>
+
+    <div class="social-links text-center">
+        <a href="https://github.com/r-swrt-GB" class="google-plus"><i class="bi bi-github"></i></a>
+        <a href="https://www.linkedin.com/in/rikus-swart-68870b1b8/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://x.com/RikusSwart5" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://www.facebook.com/RikusSwart101" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/r_swrt/" class="instagram"><i class="bi bi-instagram"></i></a>
+    </div>
+
+    <nav id="navmenu" class="navmenu">
+        <ul>
+            <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
+            <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
+            <li><a href="#skills"><i class="bi bi-gear navicon"></i> Skills</a></li>
+            <li><a href="#services"><i class="bi bi-hdd-stack navicon "></i> Services</a></li>
+            <li><a href="#experience"><i class="bi bi-file-earmark-text navicon"></i> Experience</a></li>
+            <li><a href="#projects"><i class="bi bi-images navicon"></i> Projects</a></li>
+        </ul>
+    </nav>
+
+    <div class="pt-5">
+        <p>
+            <a href="mailto:Rikusswart101@gmail.com" class="contact-link">
+                <i class="bi bi-envelope navicon"></i> Rikusswart101@gmail.com
+            </a>
+        </p>
+        <p>
+            <a href="tel:+27605045379" class="contact-link">
+                <i class="bi bi-phone navicon"></i> +27 60 504 5379
+            </a>
+        </p>
+        <p>
+            <a href="https://maps.google.com/?q=North-West, South Africa" target="_blank" class="contact-link">
+                <i class="bi bi-pin navicon"></i> North-West, South Africa
+            </a>
+        </p>
+    </div>
+
+</header>
 
 
 <!-- Preloader -->
