--- a/index.html
+++ b/index.html
@@ -74,6 +74,24 @@
 
 </header>
 
+<main class="main">
+
+    <!-- Hero Section -->
+    <section id="hero" class="hero section dark-background">
+
+        <div class="container" data-aos="fade-up" data-aos-delay="100">
+            <h2>Rikus Swart</h2>
+            <p>I'm A <span class="typed"
+                           data-typed-items=" Software Developer, Team Leader, Mobile App Developer, Relationship Builder">Designer</span><span
+                    class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span
+                    class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        </div>
+
+    </section>
+    <!-- Hero Section End -->
+    
+</main>
+
 
 <!-- Preloader -->
 <div id="preloader"></div>
