Added About section and navigation links

--- a/index.html
+++ b/index.html
@@ -89,7 +89,72 @@
 
     </section>
     <!-- Hero Section End -->
-    
+
+    <!-- About Section -->
+    <section id="about" class="about section">
+        <!--Title Section -->
+        <div class="container" data-aos="fade-up" data-aos-delay="100">
+            <div class="row gy-4 align-items-center justify-content-center">
+                <div class="col-lg-4 text-center text-lg-left">
+                    <img src="assets/img/my-profile-img.png" class="img-fluid profile-image" alt="">
+                </div>
+                <div class="col-lg-8 content">
+                    <h2>Full-stack Software Developer</h2>
+                    <p class="fst-italic py-3">
+                        "YOU SHOULD NEVER REGRET ANYTHING IN LIFE. IF IT’S GOOD, IT’S WONDERFUL. IF IT’S BAD, IT’S
+                        EXPERIENCE."
+                    </p>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ul>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong>
+                                    <span>16 January 2003</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong>
+                                    <span>060 504 5379</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rikusswart101@gmail.com</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6">
+                            <ul>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong>
+                                    <span>Undergraduate</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>North West, South Africa</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <p class="py-3">
+                        I'm a driven BSc. IT student at the North West University, Potchefstroom, with a keen passion
+                        for
+                        advancing
+                        my skills in both personal and professional realms. My fascination with technology and its
+                        endless
+                        possibilities inspires my journey in IT. I’m dedicated to making a difference, drawing on my
+                        strengths
+                        in persuasion, commitment, and building strong relationships.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Section Title -->
+        <div class="container section-title" data-aos="fade-up">
+            <h2>The origin of my passion</h2>
+            <p>Every day, I am motivated by the excitement of tackling new challenges and seizing opportunities. I
+                thrive on systematically analyzing and solving problems, whether it's optimizing operations for a major
+                retailer or innovating technology to improve lives. The visible outcomes of our work and the
+                satisfaction they bring inspire me.
+                <br>
+                <br>
+                I believe in nurturing a balanced life, enriching my emotional and intellectual growth through my
+                hobbies. I actively engage in activities like fitness, reading, and exploring the great outdoors,
+                ensuring I maintain a healthy work-life balance.</p>
+        </div>
+
+    </section>
+    <!-- End of About Section -->
 </main>
 
 
