--- a/index.html
+++ b/index.html
@@ -157,6 +157,85 @@
     <!-- End of About Section -->
 </main>
 
+<!-- Skills Section -->
+<section id="skills" class="skills section light-background">
+
+    <!-- Section Title -->
+    <div class="container section-title" data-aos="fade-up">
+        <h2>Skills</h2>
+        <!-- Description -->
+        <p>I pride myself of a skill set, where core strengths meet career-focused expertise.</p>
+    </div><!-- End Section Title -->
+
+    <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row skills-content skills-animation">
+
+            <div class="col-lg-6">
+                <h3 class="skills-title">Key Competencies</h3>
+
+                <div class="progress">
+                    <span class="skill"><span>Out of the box thinker</span> <i class="val">90%</i></span>
+                    <div class="progress-bar-wrap">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                             aria-valuemax="100"></div>
+                    </div>
+                </div><!-- End Skills Item -->
+
+                <div class="progress">
+                    <span class="skill"><span>Natural leader</span> <i class="val">100%</i></span>
+                    <div class="progress-bar-wrap">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+                             aria-valuemax="100"></div>
+                    </div>
+                </div><!-- End Skills Item -->
+
+                <div class="progress">
+                    <span class="skill"><span>Proactive and self-motivated</span> <i class="val">90%</i></span>
+                    <div class="progress-bar-wrap">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                             aria-valuemax="100"></div>
+                    </div>
+                </div><!-- End Skills Item -->
+
+            </div>
+
+            <div class="col-lg-6">
+                <h3 class="skills-title">Career Focused Skills</h3>
+
+                <div class="progress">
+                    <span class="skill"><span>Web Development</span> <i class="val">85%</i></span>
+                    <div class="progress-bar-wrap">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0"
+                             aria-valuemax="100"></div>
+                    </div>
+                </div><!-- End Skills Item -->
+
+                <div class="progress">
+                    <span class="skill"><span>Mobile App Development</span> <i class="val">80%</i></span>
+                    <div class="progress-bar-wrap">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                             aria-valuemax="100"></div>
+                    </div>
+                </div><!-- End Skills Item -->
+
+                <div class="progress">
+                    <span class="skill"><span>Database Design & Administration</span> <i class="val">90%</i></span>
+                    <div class="progress-bar-wrap">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                             aria-valuemax="100"></div>
+                    </div>
+                </div><!-- End Skills Item -->
+
+            </div>
+
+        </div>
+
+    </div>
+
+</section>
+<!-- End of Skills Section -->
+
 
 <!-- Preloader -->
 <div id="preloader"></div>
