Added Services section

--- a/index.html
+++ b/index.html
@@ -236,6 +236,120 @@
 </section>
 <!-- End of Skills Section -->
 
+<!-- Services Section -->
+<section id="services" class="services section">
+
+    <!-- Section Title -->
+    <div class="container section-title" data-aos="fade-up">
+        <h2>Services</h2>
+        <p>As a versatile developer, I bring a wealth of experience in various programming languages and frameworks.
+            Each language I use has its unique strengths and applications, contributing to the diverse range of
+            projects I've successfully completed. Explore my skills below to see how I leverage these technologies
+            to deliver impactful solutions.</p>
+    </div><!-- End Section Title -->
+
+    <div class="container">
+
+        <div class="row gy-4">
+
+            <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
+                <div class="icon flex-shrink-0"><img src="assets/img/programming-logos/vue-logo.png" alt="Vue Logo"
+                                                     class="service-logo"></div>
+                <div>
+                    <h4 class="title">Vue.js</h4>
+                    <p class="description">I utilize Vue.js to create dynamic and responsive web applications with a
+                        focus on component-based architecture and reactive data binding.</p>
+                </div>
+            </div><!-- End Service Item -->
+
+            <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
+                <div class="icon flex-shrink-0"><img src="assets/img/programming-logos/laravel-logo.png"
+                                                     alt="Laravel Logo" class="service-logo"></div>
+                <div>
+                    <h4 class="title">Laravel</h4>
+                    <p class="description">My experience with Laravel involves developing scalable solutions,
+                        leveraging its elegant syntax and extensive features for routing, ORM, and
+                        authentication.</p>
+                </div>
+            </div><!-- End Service Item -->
+
+            <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
+                <div class="icon flex-shrink-0"><img src="assets/img/programming-logos/flutter-logo.png"
+                                                     alt="Flutter Logo" class="service-logo"></div>
+                <div>
+                    <h4 class="title">Flutter</h4>
+                    <p class="description">Flutter is a UI toolkit for building natively compiled applications for
+                        mobile, web, and desktop from a single codebase.</p>
+                </div>
+            </div><!-- End Service Item -->
+
+            <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
+                <div class="icon flex-shrink-0"><img src="assets/img/programming-logos/java-logo.png"
+                                                     alt="Java Logo" class="service-logo"></div>
+                <div>
+                    <h4 class="title">Java</h4>
+                    <p class="description">Java is an object-oriented programming language that I can use to easily
+                        build enterprise-level applications.</p>
+                </div>
+            </div><!-- End Service Item -->
+
+            <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
+                <div class="icon flex-shrink-0"><img src="assets/img/programming-logos/sql-logo.png" alt="SQL Logo"
+                                                     class="service-logo"></div>
+                <div>
+                    <h4 class="title">SQL</h4>
+                    <p class="description">I use SQL to design efficient database schemas, write queries, and ensure
+                        data integrity and performance across various projects.</p>
+                </div>
+            </div><!-- End Service Item -->
+
+            <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
+                <div class="icon flex-shrink-0"><img src="assets/img/programming-logos/react-logo.png"
+                                                     alt="React Logo" class="service-logo"></div>
+                <div>
+                    <h4 class="title">React</h4>
+                    <p class="description">I am quite new to React but learning this programming language is part of
+                        broadening my web development knowledge</p>
+                </div>
+            </div><!-- End Service Item -->
+
+            <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="700">
+                <div class="icon flex-shrink-0"><img src="assets/img/programming-logos/c++-logo.png" alt="C++ Logo"
+                                                     class="service-logo"></div>
+                <div>
+                    <h4 class="title">C++</h4>
+                    <p class="description">C++ taught me valuable low level functionalities that is fused into my
+                        daily decision-making, ensuring performance and quality code is utilised.</p>
+                </div>
+            </div><!-- End Service Item -->
+
+            <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="800">
+                <div class="icon flex-shrink-0"><img src="assets/img/programming-logos/c-sharp-logo.png"
+                                                     alt="C# Logo" class="service-logo"></div>
+                <div>
+                    <h4 class="title"><a class="stretched-link">C#</a></h4>
+                    <p class="description">I use C# to develop Windows applications and web services solutions,
+                        leveraging its strong integration with Microsoft technologies.</p>
+                </div>
+            </div><!-- End Service Item -->
+
+            <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="900">
+                <div class="icon flex-shrink-0"><img src="assets/img/programming-logos/python-logo.png"
+                                                     alt="Python Logo" class="service-logo"></div>
+                <div>
+                    <h4 class="title">Python</h4>
+                    <p class="description">Python is a versatile language known for its readability and ease of use.
+                        It forms part of my automation tasks and quick development sprints.</p>
+                </div>
+            </div><!-- End Service Item -->
+
+        </div>
+
+    </div>
+
+</section>
+<!-- End of Services Section -->
+
 
 <!-- Preloader -->
 <div id="preloader"></div>
