Added Experience section

--- a/index.html
+++ b/index.html
@@ -350,6 +350,121 @@
 </section>
 <!-- End of Services Section -->
 
+<!-- Experience Section -->
+<section id="experience" class="resume section">
+
+    <!-- Experience Section Title -->
+    <div class="container section-title" data-aos="fade-up">
+        <h2>Experience</h2>
+        <p>Explore my journey from the classroom to the technology industry, showcasing my growth and diverse
+            experiences. My career has been shaped by a blend of hands-on roles, rigorous academic achievements, and
+            a passion for technology.</p>
+    </div><!-- End Experience Title -->
+
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+                <h3 class="resume-title">Professional Experience</h3>
+                <div class="resume-item">
+                    <h4>Full-time Software Developer</h4>
+                    <h5>Green Bit Technologies</h5>
+                    <h5>01 June 2022 - Present</h5>
+                    <p><em>Remote</em></p>
+                    <ul>
+                        <li>Rapidly expanded knowledge in dynamic binding, states, and DOM interactions.</li>
+                        <li>Gained extensive experience with backend development using Laravel as the PHP
+                            framework.
+                        </li>
+                        <li>Deepened understanding of Flutter and API integrations, contributing to various
+                            projects.
+                        </li>
+                        <li>Collaborated with a team to develop and implement software solutions that meet client
+                            needs.
+                        </li>
+                    </ul>
+                </div><!-- End Experience Item -->
+
+                <div class="resume-item">
+                    <h4>Internship</h4>
+                    <h5>Green Bit Technologies</h5>
+                    <h5>01 April 2022 - 01 June 2022</h5>
+                    <p><em>Remote</em></p>
+                    <ul>
+                        <li>Worked on small projects, gaining initial industry experience and understanding complex
+                            dynamics.
+                        </li>
+                        <li>Introduced to frontend frameworks like Vue and Tailwind.</li>
+                        <li>Explored cross-platform application development with Flutter.</li>
+                        <li>Learned to adapt to real-world challenges and improve technical skills.</li>
+                    </ul>
+                </div><!-- End Experience Item -->
+
+                <div class="resume-item">
+                    <h4>Workshop Assistant</h4>
+                    <h5>Auto Numberplates</h5>
+                    <h5>31 June 2021 - 31 July 2021</h5>
+                    <p><em>Rustenburg, South Africa</em></p>
+                    <ul>
+                        <li>Engaged in creating vinyl business signs, installing traffic signs, and customizing
+                            number plates.
+                        </li>
+                        <li>Developed skills in teamwork, customer service, and managing deadlines.</li>
+                        <li>Gained hands-on experience in physical labor and practical problem-solving.</li>
+                    </ul>
+                </div><!-- End Experience Item -->
+
+            </div>
+
+
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
+                <h3 class="resume-title">Education</h3>
+                <div class="resume-item">
+                    <h4>Primary School</h4>
+                    <h5>Laerskool Rustenburg</h5>
+                    <p><em>Rustenburg, South Africa</em></p>
+                    <p>Foundational education focusing on basic skills and early development.</p>
+                </div><!-- End Experience Item -->
+
+                <div class="resume-item">
+                    <h4>High School</h4>
+                    <h5>Hoërskool Rustenburg</h5>
+                    <p><em>Rustenburg, South Africa</em></p>
+                    <p>Completed secondary education with a focus on leadership and academic excellence.</p>
+                </div><!-- End Experience Item -->
+
+                <h3 class="resume-title">Leadership and Extra-Curricular Activities</h3>
+                <div class="resume-item">
+                    <h4>Leadership Roles</h4>
+                    <ul>
+                        <li>Head Boy (2016)</li>
+                        <li>Student Council (2018-2021)</li>
+                    </ul>
+                </div><!-- End Experience Item -->
+
+                <div class="resume-item">
+                    <h4>Extra-Curricular Activities</h4>
+                    <ul>
+                        <li>National Debating Team (2018-2020)</li>
+                        <li>Honorary Colours for Chess</li>
+                        <li>Honorary Colours for Debate</li>
+                        <li>Honorary Colours for Cross Country</li>
+                        <li>Honorary Colours for Leadership</li>
+                        <li>Public Speaking</li>
+                        <li>Programming Olympiad</li>
+                        <li>Athletics</li>
+                    </ul>
+                </div><!-- End Experience Item -->
+
+            </div>
+
+        </div>
+    </div>
+
+</section>
+<!-- End of Experience Section -->
+
 
 <!-- Preloader -->
 <div id="preloader"></div>
