--- a/index.html
+++ b/index.html
@@ -465,6 +465,111 @@
 </section>
 <!-- End of Experience Section -->
 
+<!-- Projects Section -->
+<section id="projects" class="portfolio section light-background">
+
+    <!-- Projects Section Title -->
+    <div class="container section-title" data-aos="fade-up">
+        <h2>Projects</h2>
+        <p>Explore a selection of my projects, including those published on the app store, university assignments,
+            and personal endeavors.</p>
+    </div>
+    <!-- End of Projects Section Title -->
+
+    <div class="container projects-container">
+
+        <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
+
+            <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+
+                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+                    <div class="portfolio-content h-100">
+                        <img src="assets/img/portfolio/iwashere-logo.png" class="img-fluid portfolio-image" alt="">
+                        <div class="portfolio-info">
+                            <h4>IWASHERE</h4>
+                            <p>IWASHERE Mobile Application (Flutter & Firebase)</p>
+                            <a href="https://apps.apple.com/za/app/iwashere/id6476633265" title="More Details"
+                               class="details-link"><i
+                                    class="bi bi-link-45deg"></i></a>
+                        </div>
+                    </div>
+                </div><!-- End Projects Item -->
+
+                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+                    <div class="portfolio-content h-100">
+                        <img src="assets/img/portfolio/oeber-logo.png" class="img-fluid portfolio-image" alt="">
+                        <div class="portfolio-info">
+                            <h4>Oeber Brew</h4>
+                            <p>Oeber Brew (Flutter & Firebase)</p>
+                            <a href="https://github.com/Theunis-Kok/Oeber" title="More Details"
+                               class="details-link"><i
+                                    class="bi bi-link-45deg"></i></a>
+                        </div>
+                    </div>
+                </div><!-- End Projects Item -->
+
+                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+                    <div class="portfolio-content h-100">
+                        <img src="assets/img/portfolio/react-tic-tac-toe-logo.png" class="img-fluid portfolio-image"
+                             alt="">
+                        <div class="portfolio-info">
+                            <h4>Tic Tac Toe</h4>
+                            <p>Tic Tac Toe (React)</p>
+                            <a href="https://github.com/r-swrt-GB/react-tik-tac-toe" title="More Details"
+                               class="details-link"><i
+                                    class="bi bi-link-45deg"></i></a>
+                        </div>
+                    </div>
+                </div><!-- End Projects Item -->
+
+                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+                    <div class="portfolio-content h-100">
+                        <img src="assets/img/portfolio/fix-it-logo.png" class="img-fluid portfolio-image" alt="">
+                        <div class="portfolio-info">
+                            <h4>FIX IT</h4>
+                            <p>Fix it workshop (.NET & C#)</p>
+                            <a href="https://github.com/r-swrt-GB/fix-it" title="More Details" class="details-link"><i
+                                    class="bi bi-link-45deg"></i></a>
+                        </div>
+                    </div>
+                </div><!-- End Projects Item -->
+
+                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+                    <div class="portfolio-content h-100">
+                        <img src="assets/img/portfolio/chat-app.png" class="img-fluid portfolio-image" alt="">
+                        <div class="portfolio-info">
+                            <h4>Chat App</h4>
+                            <p>Chat app (.NET & C#)</p>
+                            <a href="https://github.com/r-swrt-GB/cmpg-315-group-5" title="More Details"
+                               class="details-link"><i
+                                    class="bi bi-link-45deg"></i></a>
+                        </div>
+                    </div>
+                </div><!-- End Projects Item -->
+
+                <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+                    <div class="portfolio-content h-100">
+                        <img src="assets/img/portfolio/java-tic-tac-toe-logo.png" class="img-fluid portfolio-image"
+                             alt="">
+                        <div class="portfolio-info">
+                            <h4>Tic Tac Toe</h4>
+                            <p>Tic Tac Toe (Java)</p>
+                            <a href="https://github.com/r-swrt-GB/tic-tac-toe" title="More Details"
+                               class="details-link"><i
+                                    class="bi bi-link-45deg"></i></a>
+                        </div>
+                    </div>
+                </div><!-- End Projects Item -->
+
+            </div><!-- End Projects Container -->
+
+        </div>
+
+    </div>
+
+</section>
+<!-- End of Projects Section -->
+
 
 <!-- Preloader -->
 <div id="preloader"></div>
