Added Small hobies section

--- a/index.html
+++ b/index.html
@@ -570,6 +570,55 @@
 </section>
 <!-- End of Projects Section -->
 
+<!-- Hobbies Section -->
+<section id="Hobbies" class="hobbies section">
+
+    <!-- Section Title -->
+    <div class="container section-title" data-aos="fade-up">
+        <h2>Hobbies</h2>
+        <p>Outside of my professional work, I enjoy a variety of activities that keep me inspired and balanced. From
+            exploring the great outdoors to indulging in my passion for cars and getting lost in a good book, these
+            hobbies enrich my life and offer new perspectives.</p>
+    </div><!-- End Section Title -->
+
+    <div class="container">
+
+        <div class="row gy-4">
+
+            <div class="col-lg-4 col-md-6 hobby-item d-flex" data-aos="fade-up" data-aos-delay="100">
+                <div class="icon flex-shrink-0"></div>
+                <div>
+                    <h4 class="title">Outdoors</h4>
+                    <p class="description">I love exploring the outdoors, whether it's hiking, camping, or just
+                        enjoying nature's beauty.</p>
+                </div>
+            </div><!-- End Hobby Item -->
+
+            <div class="col-lg-4 col-md-6 hobby-item d-flex" data-aos="fade-up" data-aos-delay="200">
+                <div class="icon flex-shrink-0"></div>
+                <div>
+                    <h4 class="title">Cars</h4>
+                    <p class="description">I have a passion for cars, enjoying everything from classic models to the
+                        latest innovations in automotive technology.</p>
+                </div>
+            </div><!-- End Hobby Item -->
+
+            <div class="col-lg-4 col-md-6 hobby-item d-flex" data-aos="fade-up" data-aos-delay="300">
+                <div class="icon flex-shrink-0"></div>
+                <div>
+                    <h4 class="title">Reading</h4>
+                    <p class="description">Reading is a favorite pastime, allowing me to immerse myself in different
+                        worlds and ideas, from fiction to non-fiction.</p>
+                </div>
+            </div><!-- End Hobby Item -->
+
+        </div>
+
+    </div>
+
+</section>
+<!-- End of Hobbies Section -->
+
 
 <!-- Preloader -->
 <div id="preloader"></div>
