Added Footer and scroll to top funcitonality

--- a/index.html
+++ b/index.html
@@ -619,6 +619,20 @@
 </section>
 <!-- End of Hobbies Section -->
 
+<footer id="footer" class="footer position-relative light-background">
+
+    <div class="container">
+        <div class="credits">
+            Designed by <a href="https://www.linkedin.com/in/rikus-swart-68870b1b8/">Rikus Swart</a>
+        </div>
+    </div>
+
+</footer>
+
+<!-- Scroll Top -->
+<a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+        class="bi bi-arrow-up-short"></i></a>
+
 
 <!-- Preloader -->
 <div id="preloader"></div>
