Update index.html to include Honours description in about section

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         </div>
                     </div>
                     <p class="py-3">
-                        I'm a driven BSc. IT student at the North West University, Potchefstroom, with a keen passion
+                        I'm a driven BSc. Honours IT student at the North West University, Potchefstroom, with a keen passion
                         for advancing
                         my skills in both personal and professional realms. My fascination with technology and its endless
                         possibilities inspires my journey in IT. I’m dedicated to making a difference, drawing on my
