--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               />
             </div>
             <div class="col-lg-8 content">
-              <h2>Full-stack Software Developer</h2>
+              <h2>Software Engineer</h2>
               <p class="fst-italic py-3">
                 "YOU SHOULD NEVER REGRET ANYTHING IN LIFE. IF IT’S GOOD, IT’S
                 WONDERFUL. IF IT’S BAD, IT’S EXPERIENCE."
@@ -207,7 +207,8 @@
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Degree:</strong> <span>Undergraduate</span>
+                      <strong>Degree:</strong>
+                      <span>BSc Honours IT &amp; Computer Science</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
@@ -218,15 +219,16 @@
                 </div>
               </div>
               <p class="py-3">
-                I am a driven BSc Honours IT and Computer Science graduate who
-                completed my degree with Cum Laude at North-West University in
-                Potchefstroom. I have a strong passion for continuous growth in
-                both personal and professional development. My fascination with
-                technology and its limitless possibilities drives my journey in
-                software development and innovative IT solutions. I am committed
-                to making a meaningful impact through my work and I rely on
-                dedication clear communication and the ability to build strong
-                relationships to achieve this.
+                I am a driven Software Engineer at Green Bit Technologies,
+                specializing in robust Laravel web applications and innovative
+                mobile solutions. I recently completed my BSc Honours in
+                Computer Science and Information Technology at North-West
+                University and transitioned from academic theory to delivering
+                high-impact, full-scale digital products. My daily focus is on
+                solving complex problems through systematic analysis while
+                building strong, collaborative relationships. Outside the
+                codebase, I maintain a disciplined work-life balance through
+                fitness, reading, and outdoor exploration.
               </p>
               <!-- Download CV Button -->
               <div class="pt-3">
@@ -282,7 +284,41 @@
 
               <div class="progress">
                 <span class="skill"
+                  ><span>Exceptional programming skills</span>
+                  <i class="val">95%</i></span
+                >
+                <div class="progress-bar-wrap">
+                  <div
+                    class="progress-bar"
+                    role="progressbar"
+                    aria-valuenow="95"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+              <!-- End Skills Item -->
+
+              <div class="progress">
+                <span class="skill"
                   ><span>Out of the box thinker</span>
+                  <i class="val">90%</i></span
+                >
+                <div class="progress-bar-wrap">
+                  <div
+                    class="progress-bar"
+                    role="progressbar"
+                    aria-valuenow="90"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+              <!-- End Skills Item -->
+
+              <div class="progress">
+                <span class="skill"
+                  ><span>Proactive and self-motivated</span>
                   <i class="val">90%</i></span
                 >
                 <div class="progress-bar-wrap">
@@ -315,7 +351,44 @@
 
               <div class="progress">
                 <span class="skill"
-                  ><span>Proactive and self-motivated</span>
+                  ><span>Adaptive</span> <i class="val">90%</i></span
+                >
+                <div class="progress-bar-wrap">
+                  <div
+                    class="progress-bar"
+                    role="progressbar"
+                    aria-valuenow="90"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+              <!-- End Skills Item -->
+
+              <div class="progress">
+                <span class="skill"
+                  ><span>Strong interpersonal skills</span>
+                  <i class="val">95%</i></span
+                >
+                <div class="progress-bar-wrap">
+                  <div
+                    class="progress-bar"
+                    role="progressbar"
+                    aria-valuenow="95"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+              <!-- End Skills Item -->
+            </div>
+
+            <div class="col-lg-6">
+              <h3 class="skills-title">Career Focused Skills</h3>
+
+              <div class="progress">
+                <span class="skill"
+                  ><span>Object-Oriented Programming</span>
                   <i class="val">90%</i></span
                 >
                 <div class="progress-bar-wrap">
@@ -329,10 +402,6 @@
                 </div>
               </div>
               <!-- End Skills Item -->
-            </div>
-
-            <div class="col-lg-6">
-              <h3 class="skills-title">Career Focused Skills</h3>
 
               <div class="progress">
                 <span class="skill"
@@ -369,6 +438,23 @@
 
               <div class="progress">
                 <span class="skill"
+                  ><span>Data Analysis & Management</span>
+                  <i class="val">85%</i></span
+                >
+                <div class="progress-bar-wrap">
+                  <div
+                    class="progress-bar"
+                    role="progressbar"
+                    aria-valuenow="85"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+              <!-- End Skills Item -->
+
+              <div class="progress">
+                <span class="skill"
                   ><span>Database Design & Administration</span>
                   <i class="val">90%</i></span
                 >
@@ -377,6 +463,23 @@
                     class="progress-bar"
                     role="progressbar"
                     aria-valuenow="90"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+              <!-- End Skills Item -->
+
+              <div class="progress">
+                <span class="skill"
+                  ><span>DevOps & Containerisation</span>
+                  <i class="val">75%</i></span
+                >
+                <div class="progress-bar-wrap">
+                  <div
+                    class="progress-bar"
+                    role="progressbar"
+                    aria-valuenow="75"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
@@ -635,9 +738,9 @@
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
               <h3 class="resume-title">Professional Experience</h3>
               <div class="resume-item">
-                <h4>Full-time Software Developer</h4>
+                <h4>Full-time Software Engineer</h4>
                 <h5>Green Bit Technologies</h5>
-                <h5>01 June 2022 - Present</h5>
+                <h5>24 November 2025 - Present</h5>
                 <p><em>Remote</em></p>
                 <ul>
                   <li>
@@ -663,7 +766,7 @@
               <div class="resume-item">
                 <h4>Internship</h4>
                 <h5>Green Bit Technologies</h5>
-                <h5>01 April 2022 - 01 June 2022</h5>
+                <h5>01 April 2022 - 20 November 2025</h5>
                 <p><em>Remote</em></p>
                 <ul>
                   <li>
@@ -688,7 +791,7 @@
               <div class="resume-item">
                 <h4>Workshop Assistant</h4>
                 <h5>Auto Numberplates</h5>
-                <h5>31 June 2021 - 31 July 2021</h5>
+                <h5>26 June 2021 - 26 July 2021</h5>
                 <p><em>Rustenburg, South Africa</em></p>
                 <ul>
                   <li>
@@ -710,6 +813,20 @@
 
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
               <h3 class="resume-title">Education</h3>
+              <div class="resume-item">
+                <h4>BSc Honours in Computer Science and Information Technology</h4>
+                <h5>North-West University</h5>
+                <p><em>Potchefstroom, South Africa</em></p>
+              </div>
+              <!-- End Experience Item -->
+
+              <div class="resume-item">
+                <h4>BSc in Information Technology</h4>
+                <h5>North-West University</h5>
+                <p><em>Potchefstroom, South Africa</em></p>
+              </div>
+              <!-- End Experience Item -->
+
               <div class="resume-item">
                 <h4>Primary School</h4>
                 <h5>Laerskool Rustenburg</h5>
@@ -740,6 +857,7 @@
                 <ul>
                   <li>Head Boy (2016)</li>
                   <li>Student Council (2018-2021)</li>
+                  <li>Student Assistant (2022-2025)</li>
                 </ul>
               </div>
               <!-- End Experience Item -->
@@ -894,6 +1012,29 @@
                     <p>Chat app (.NET & C#)</p>
                     <a
                       href="https://github.com/r-swrt-GB/cmpg-315-group-5"
+                      title="More Details"
+                      class="details-link"
+                      ><i class="bi bi-link-45deg"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+              <!-- End Projects Item -->
+
+              <div
+                class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app"
+              >
+                <div class="portfolio-content h-100">
+                  <div
+                    class="portfolio-image portfolio-icon-tile d-flex align-items-center justify-content-center"
+                  >
+                    <i class="bi bi-currency-dollar portfolio-dollar-icon"></i>
+                  </div>
+                  <div class="portfolio-info">
+                    <h4>Balance Buddy</h4>
+                    <p>Web app for tracking income, expenses, and budgets</p>
+                    <a
+                      href="https://balance-buddy.netlify.app/"
                       title="More Details"
                       class="details-link"
                       ><i class="bi bi-link-45deg"></i
